--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title                    : "Guanxun Li's website"
 title_separator          : "-"
 name                     : &name "Guanxun Li"
 description              : &description "personal description"
-url                      : https://guanxunli.github.io
+url                      : https://www.guanxun.li
 baseurl                  : # "" # the subpath of your site, e.g. "/blog"
 repository               : "guanxunli/guanxunli.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
