--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ author:
   name             : "Guanxun Li"
   avatar           : "photo.png"
   bio              : 
-  location         : "College Station, Texas"
+  location         : "Zhuhai, Guangdong"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=jxFkCp8AAAAJ&hl=en"
-  email            : guanxun@stat.tamu.edu
+  email            : guanxun@bnu.edu.cn
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   github           : "guanxunli"
   orcid            : "https://orcid.org/0000-0002-2449-4469"
